# uchmviewer-draft

./: .gitignore  CMakeLists.txt  ChangeLog  INSTALL.md  common.pri  uchmviewer.pro
.github/workflows/: build_tests_linux.yml  build_tests_macos.yml
cmake/: install-helper.cmake  qt-aliases.cmake
lib/: CMakeLists.txt  lib.pro
lib/browser/: CMakeLists.txt  README.md  abstract-browser-controller.cpp  browser-controller.cpp  browser-history-impl.cpp  browser.pro
lib/browser/include/browser/: abstract-browser-controller.hpp  abstract-controller.hpp  browser-builder.hpp  browser-controller.hpp  browser-history-impl.hpp  browser-history.hpp  browser-settings.hpp  browser-types.hpp  builder.hpp  content-provider.hpp  controller.hpp  export.hpp  history-impl.hpp  history.hpp  settings.hpp  types.hpp
lib/browser/src/: abstract-controller.cpp  controller.cpp  history-impl.cpp
lib/libebook/: CMakeLists.txt  ebook.cpp  ebook.h  ebook_chm.cpp  ebook_chm.h  ebook_epub.cpp  ebook_epub.h  helper_entitydecoder.cpp  helper_search_index.cpp  helper_search_index.h  libebook.pro
lib/ubrowser/: CMakeLists.txt  ubrowser.pro
lib/ubrowser-qtwebengine/: CMakeLists.txt  ubrowser-qtwebengine.pro
lib/ubrowser-qtwebengine/src/: qtwebengine.json  qtwebengine.qrc  qtwebenginebrowser.cpp  qtwebenginebrowser.h  qtwebenginebuilder.cpp  qtwebenginebuilder.h  qtwebenginepage.h  qtwebengineurlschemehandler.cpp  qtwebengineurlschemehandler.h  qtwebenginewidget.cpp  qtwebenginewidget.h
lib/ubrowser-qtwebkit/: CMakeLists.txt  ubrowser-qtwebkit.pro
lib/ubrowser-qtwebkit/src/: qtwebkit.json  qtwebkit.qrc  qtwebkitbrowser.cpp  qtwebkitbrowser.h  qtwebkitbrowser.js  qtwebkitbuilder.cpp  qtwebkitbuilder.h  qtwebkitnetwork.cpp  qtwebkitnetwork.h  qtwebkitwidget.cpp  qtwebkitwidget.h
lib/ubrowser/include/ubrowser/: abstractbrowser.hpp  browser.hpp  builder.hpp  content-provider.hpp  contentprovider.hpp  export.hpp  history-impl.hpp  history.hpp  settings.hpp  types.hpp
lib/ubrowser/src/: abstractbrowser.cpp  browser.cpp  content-provider.cpp  contentprovider.cpp  history-impl.cpp
src/: CMakeLists.txt  config.cpp  config.h  content-provider-impl.cpp  content-provider-impl.h  content-provider-impl.hpp  dialog_setup.cpp  ebookcontentprovider.cpp  ebookcontentprovider.h  main.cpp  mainwindow.cpp  mainwindow.h  navigationpanel.cpp  pluginmanager.cpp  pluginmanager.h  recentfiles.cpp  settings.h  src.pro  tab_bookmarks.cpp  tab_contents.cpp  tab_contents.h  tab_index.cpp  toolbarmanager.cpp  treeitem_toc.cpp  viewwindow.h  viewwindowmgr.cpp  viewwindowmgr.h  webbrowser.h
src/qtwebengine/: dataprovider.cpp  viewwindow.cpp  viewwindow.h  webengine.qrc  webenginebrowser.cpp  webenginebrowser.h  webenginebrowser.js  webenginecontroller.cpp  webenginecontroller.h  webenginepage.h  webenginewidget.cpp  webenginewidget.h
src/qtwebkit/: dataprovider.cpp  dataprovider.h  viewwindow.cpp  viewwindow.h  webkit.qrc  webkitbrowser.cpp  webkitbrowser.h  webkitbrowser.js  webkitcontroller.cpp  webkitcontroller.h  webkitwidget.cpp  webkitwidget.h
tools/: README.md
